# sqlc-gen-greeter

./: .gitignore  Cargo.toml  Makefile  build.rs  res.wasm
src/: codegen.proto  crud.rs  head.txt  main.rs  proto.rs  utils.rs
