[package]
name = "sqlc-gen-json-wasm"
version = "0.1.0"
authors = ["Kyle Conroy <kyle@conroy.org>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
sqlparser = { version = "0.9.0", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
prost = "0.9.0"
bytes = "1.1.0"
convert_case = "0.6.0"
pluralizer = "0.4.0"

[build-dependencies]
prost-build = "0.9.0"

[[bin]]
name = "sqlc-gen-proto"
path = "src/proto.rs"

[[bin]]
name = "sqlc-gen-crud"
path = "src/crud.rs"